--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
@@ -16,6 +17,7 @@
     "helmet": "^3.23.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
     "njwt": "^1.0.0",
     "secure-random": "^1.1.2"
   },
