--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^3.23.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.18",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "njwt": "^1.0.0",
     "secure-random": "^1.1.2"
