Modify PORT and .env

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,6 @@
+# Databases
+DATABASE_URL=YOUR_DATABASE_URL
+
+# Keys
 SESSION_SECRET_KEY=UNIQUE_LONG_RANDOM_GENERATED_STRING
 JWT_SIGNING_KEY=RANDOM_256-BYTE_BASE64_ENCONDED_STRING(GENERATED_USING_SECURE_RANDOM)
