--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "PORT=3000 nodemon server.js"
   },
   "author": "Francisco",
   "license": "ISC"
